changed how the overlay is animated, made the body fixed when nav is open, and made the nav scrollable if there's too much content

--- a/css/style.css
+++ b/css/style.css
@@ -388,16 +388,17 @@ body {
 }
 
 /* **************
-  608px = 38em
+  720px = 45em
 ***************/
-@media (max-width: 38em) {
-  html {
-    /* 8/16 = 0.5 */
-    font-size: 50%;
-  }
 
-  .grid--2-cols {
-    gap: 6.4rem;
+@media (max-width: 45em) {
+  html.nav-open body {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
   }
 
   .header {
@@ -405,80 +406,9 @@ body {
     justify-content: space-between;
     position: relative;
   }
-
   .mobile-nav {
     display: none;
   }
-
-  .section-hero {
-    margin-top: 0;
-  }
-
-  .hero-text-box {
-    text-align: center;
-    width: 100%;
-  }
-
-  .heading--primary {
-    font-size: 4.8rem;
-    margin-bottom: 2.6rem;
-  }
-  .heading--primary br {
-    display: none;
-  }
-
-  .hero-text {
-    font-size: 2.1rem;
-    margin-bottom: 3rem;
-    padding: 0 2rem;
-  }
-
-  .btn--more:link,
-  .btn--more:visited {
-    font-size: 2.2rem;
-    border-radius: 1.8rem;
-    margin-bottom: 5.6rem;
-  }
-
-  .hero-img-box img {
-    width: 100%;
-  }
-
-  .hero-img-desktop {
-    display: none;
-  }
-
-  .hero-img-mobile {
-    display: inline;
-  }
-
-  .featured-in {
-    justify-content: space-between;
-    flex-shrink: 0;
-  }
-
-  .featured-in-img {
-    transform: scale(70%);
-  }
-
-  .container {
-    max-width: 100%;
-    padding: 0;
-
-    margin: 0 auto;
-  }
-
-  .transform {
-    transform: translateX(0);
-  }
-
-  .hero-img-box img {
-    transform: translateY(0rem);
-  }
-
-  /* ///////////////// */
-  /* MOBILE NAVIGATION */
-  /* ///////////////// */
 
   .mobile-nav {
     position: absolute;
@@ -490,18 +420,14 @@ body {
     background-color: var(--color-white);
     z-index: 999;
     transform: translateX(100%);
-
     flex-direction: column;
     justify-content: flex-start;
     gap: 3.6rem;
-
     transition: all 500ms;
-
-    /* backdrop-filter: blur(5px); */
-
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.6);
   }
 
   .nav-open .mobile-nav {
@@ -532,6 +458,7 @@ body {
 
   .login {
     margin-left: 0rem;
+    margin-bottom: 4.8rem;
     padding: 0 3rem;
     text-align: center;
   }
@@ -609,14 +536,14 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     display: block;
     height: 100vh;
-    width: 0%;
+    width: 100vw;
     z-index: 100;
 
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
 
-    /* transition: all 600ms; */
+    transition: all 300ms;
   }
 
   .nav-open .nav-background {
@@ -624,13 +551,12 @@ body {
     visibility: visible;
     pointer-events: auto;
     display: block;
-    width: 100%;
-    transition: all 675ms;
   }
 
   /* making mobile nav sticky */
   .sticky .mobile-nav {
     position: fixed;
+    overflow-y: scroll;
   }
 
   .sticky .btn-mobile-nav {
@@ -642,4 +568,88 @@ body {
   .sticky .nav-background {
     position: fixed;
   }
+}
+
+/* **************
+  608px = 38em
+***************/
+@media (max-width: 38em) {
+  html {
+    /* 8/16 = 0.5 */
+    font-size: 50%;
+  }
+
+  .grid--2-cols {
+    gap: 6.4rem;
+  }
+
+  .section-hero {
+    margin-top: 0;
+  }
+
+  .hero-text-box {
+    text-align: center;
+    width: 100%;
+  }
+
+  .heading--primary {
+    font-size: 4.8rem;
+    margin-bottom: 2.6rem;
+  }
+  .heading--primary br {
+    display: none;
+  }
+
+  .hero-text {
+    font-size: 2.1rem;
+    margin-bottom: 3rem;
+    padding: 0 2rem;
+  }
+
+  .btn--more:link,
+  .btn--more:visited {
+    font-size: 2.2rem;
+    border-radius: 1.8rem;
+    margin-bottom: 5.6rem;
+  }
+
+  .hero-img-box img {
+    width: 100%;
+  }
+
+  .hero-img-desktop {
+    display: none;
+  }
+
+  .hero-img-mobile {
+    display: inline;
+  }
+
+  .featured-in {
+    justify-content: space-between;
+    flex-shrink: 0;
+  }
+
+  .featured-in-img {
+    transform: scale(70%);
+  }
+
+  .container {
+    max-width: 100%;
+    padding: 0;
+
+    margin: 0 auto;
+  }
+
+  .transform {
+    transform: translateX(0);
+  }
+
+  .hero-img-box img {
+    transform: translateY(0rem);
+  }
+
+  /* ///////////////// */
+  /* MOBILE NAVIGATION */
+  /* ///////////////// */
 }
